src/tests/snapshots/crates_io__tests__owners__modify_multiple_owners-6.snap
---
source: src/tests/owners.rs
expression: app.emails_snapshot().await
---
To: user2@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Ownership invitation for "owners_multiple"
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable

foo has invited you to become an owner of the crate owners_multiple!

Visit https://crates.io/accept-invite/[invite-token] to accept =
this invitation,
or go to https://crates.io/me/pending-invites to manage all of your crate o=
wnership invitations.
----------------------------------------

To: user3@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Ownership invitation for "owners_multiple"
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable

foo has invited you to become an owner of the crate owners_multiple!

Visit https://crates.io/accept-invite/[invite-token] to accept =
this invitation,
or go to https://crates.io/me/pending-invites to manage all of your crate o=
wnership invitations.
----------------------------------------

To: user2@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Ownership invitation for "owners_multiple"
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable

foo has invited you to become an owner of the crate owners_multiple!

Visit https://crates.io/accept-invite/[invite-token] to accept =
this invitation,
or go to https://crates.io/me/pending-invites to manage all of your crate o=
wnership invitations.
----------------------------------------

To: user3@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Ownership invitation for "owners_multiple"
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable

foo has invited you to become an owner of the crate owners_multiple!

Visit https://crates.io/accept-invite/[invite-token] to accept =
this invitation,
or go to https://crates.io/me/pending-invites to manage all of your crate o=
wnership invitations.
