src/tests/snapshots/crates_io__tests__owners__new_crate_owner.snap
---
source: src/tests/owners.rs
expression: app.emails_snapshot().await
---
To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Successfully published foo_owner@1.0.0
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Hello foo!

A new version of the package foo_owner (1.0.0) was published by your account (https://crates.io/users/foo) at [0000-00-00T00:00:00Z].

If you have questions or security concerns, you can contact us at help@crates.io. If you would like to stop receiving these security notifications, you can disable them in your account settings.

--
The crates.io Team
----------------------------------------

To: Bar@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Ownership invitation for "foo_owner"
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


foo has invited you to become an owner of the crate foo_owner!

Visit https://crates.io/accept-invite/[invite-token] to accept this invitation.

You can also go to https://crates.io/me/pending-invites to manage all of your crate ownership invitations.

--
The crates.io Team
